Mon Oct  4 12:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (regexp): dregexp has literal string only at the head
	  and successors are array.  [ruby-core:32682]

Mon Oct  4 10:22:21 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (rand_init): This checks the value is in 32bit or not,
	  so use int32_t, not int.

Mon Oct  4 09:47:39 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (rand_init): remove useless assignment.

	* re.c (update_char_offset): remove unused variable.

	* re.c (read_escaped_byte): ditto.

Mon Oct  4 09:30:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/lib/openssl/bn.rb (Integer#to_bn): OpenSSL::BN.new
	  accepts only Strings, so call Integer#to_s(16).
	  16 is for an optimization. [ruby-dev:42336]

Mon Oct  4 07:57:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (fiber_memsize): Return size.
	  Before this change, fiber_memsize always returns 0.

Mon Oct  4 07:16:55 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/unicode.c (onigenc_unicode_property_name_to_ctype):
	  remove useless assignment.

	* vm.c (vm_make_proc_from_block): ditto.

	* variable.c (rb_ivar_count): ditto.

Mon Oct  4 06:40:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (clean-rdoc): Don't use \ in variable expantion.
	  BSD make treats it as an escape character.

Mon Oct  4 00:01:53 2010  wanabe  <s.wanabe@gmail.com>

	* tool/config.sub: revert r29320, r29324, r29347, r29354, r29365
	  to automake-1.11.1. [ruby-core:32634]

	* win32/mkexports.rb: no longer use 'mingw64'. a patch from Luis Lavena
	  at [ruby-core:32678].

Sun Oct  3 20:36:37 2010 Akio Tajima (arton) <artonx@yahoo.co.jp>

	* test/win32ole/test_folderitem2_invokeverb.rb: Change creating shortcut verb to 'Link' [Bug #3339]

Sun Oct  3 19:44:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (Makefile): get rid of duplicated ruby target when
	  already there it was.
